test/testdata/functions/missing_2_args_error.lox
fun add(a, b) {
    print a + b;
}

add(); // error: add() accepts 2 arguments but 0 were given
